--- a/L01.html
+++ b/L01.html
@@ -71,7 +71,7 @@
 									<li><b>Output:</b> Output is the final result of data processing. It can be anything from images, video, or audio content, even the words you type using a keyboard. You can also receive the output through a printer or a projector instead of directly through your device.</li><br></p></ul>
 								<span class="image main"><img src="images/inputprocessoutput.png" alt="" /></span>
 							<h2>Software?</h2>
-							<p>Software is a set of computer programs and associated documentation and data.[1] This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
+							<p>Software is a set of computer programs and associated documentation and data. This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
 							<span class="image main"><img src="images/software.png" alt="" /></span>
 							<h3>System Software</h3>
 							<ul><p><li><b>Operating Systems:</b> Windows, Mac Os, Linux</li><br>
