--- a/L01.html
+++ b/L01.html
@@ -91,7 +91,11 @@
 							<p><b>Assembly language</b></p>
 							<p>In computer programming, assembly language, often referred to simply as Assembly and commonly abbreviated as ASM or asm, is any low-level programming language with a very strong correspondence between the instructions in the language and the architecture's machine code instructions. Assembly language usually has one statement per machine instruction (1:1), but constants, comments, assembler directives, symbolic labels of, e.g., memory locations, registers, and macros are generally also supported.</p>
 							<span class="image main"><img src="images/assembly.png" alt="" /></span>							
-								
+							<p><b>High level language</b></p>	
+							<p>In computer science, a high-level programming language is a programming language with strong abstraction from the details of the computer. In contrast to low-level programming languages, it may use natural language elements, be easier to use, or may automate (or even hide entirely) significant areas of computing systems (e.g. memory management), making the process of developing a program simpler and more understandable than when using a lower-level language. The amount of abstraction provided defines how "high-level" a programming language is.</p>
+							<p><b>Programing language</b></p>
+							<p></p>
+
 						</div>
 					</div>
 
