--- a/L01.html
+++ b/L01.html
@@ -94,7 +94,49 @@
 							<p><b>High level language</b></p>	
 							<p>In computer science, a high-level programming language is a programming language with strong abstraction from the details of the computer. In contrast to low-level programming languages, it may use natural language elements, be easier to use, or may automate (or even hide entirely) significant areas of computing systems (e.g. memory management), making the process of developing a program simpler and more understandable than when using a lower-level language. The amount of abstraction provided defines how "high-level" a programming language is.</p>
 							<p><b>Programing language</b></p>
-							<p></p>
+							<span class="image main"><img src="images/codelanguage.JPG" alt="" /></span>
+							<span class="image main"><img src="images/codelanguage2.JPG" alt="" /></span>
+							<p><b>Compiler</b></p>
+							<span class="image main"><img src="images/compiler.JPG" alt="" /></span>
+							<p><b>Interpreter</b></p>
+							<span class="image main"><img src="images/interpreter.JPG" alt="" /></span>
+							<h2><b>Program Disign</b></h2>
+							<p><b>Program development cycle</b><br></p>
+							<span class="image main"><img src="images/develop cycle.JPG" alt="" /></span>
+							<p>is Programming Development Cycle is a model which is used to represent the stages and tasks that are included orderly in each step to write and put software.<br></p>
+							<p>From the initial process of planning, the particular software can be used as a product in long-term usage by implementation and continuation and used as a completed software application. The Programming Development Cycle contains step by steps like analysis which is a requirement.<br></p>
+							<p>It also designs the solution and after that validates and implements the design. Then test and document the solution. In the below section, you will understand what are the stages or cycles of Programming Development.<br></p>
+							<p><b>Why development cycle important?</b></p>
+							<ul><p><li>It provides an effective framework and method to develop software applications.</li><br>
+								<li>It helps in effectively planning before starting the actual development. SDLC allows developers to analyze the requirements.</li><br>
+								<li>It helps in reducing unnecessary costs during development. During the initial phases, developers can estimate the costs and predict costly mistakes.</li><br>
+								<li>It helps in effectively planning before starting the actual development. SDLC allows developers to analyze the requirements.</li><br>
+								<li>It enables developers to design and build high-quality software products. This is because they follow a systematic process that allows them to test the software before it is rolled out.</li><br>
+								<li>It provides a basis when evaluating the effectiveness of the software. This further enhances the software product.</li><br></ul>
+							<p><b>Designing a Program</b></p>
+							<ul><p><li>Understanding the Program</li><br>
+								<li>Using Design Tools to Create a Model</li><br>
+								<li>Develop Test Data</li><br></p></ul>
+							<p><b>Pseudocode</b></p>
+							<p>In computer science, pseudocode is a plain language description of the steps in an algorithm or another system. Pseudocode often uses structural conventions of a normal programming language, but is intended for human reading rather than machine reading. It typically omits details that are essential for machine understanding of the algorithm, such as variable declarations and language-specific code. The programming language is augmented with natural language description details, where convenient, or with compact mathematical notation. The purpose of using pseudocode is that it is easier for people to understand than conventional programming language code, and that it is an efficient and environment-independent description of the key principles of an algorithm. It is commonly used in textbooks and scientific publications to document algorithms and in planning of software and other algorithms.</p>
+							<h2><b>FlowChart</b></h2>
+							<p>A flowchart is a type of diagram that represents a workflow or process. A flowchart can also be defined as a diagrammatic representation of an algorithm, a step-by-step approach to solving a task.
+							The flowchart shows the steps as boxes of various kinds, and their order by connecting the boxes with arrows. This diagrammatic representation illustrates a solution model to a given problem. Flowcharts are used in analyzing, designing, documenting or managing a process or program in various fields.</p>
+							<p><b>How FlowChart important?</b></p>
+							<p>Flow charts are an important tool for the improvement of processes. By providing a graphical representation, they help project teams to identify the different elements of a process and understand the interrelationships among the various steps.</p>
+							<img src="images/flowchart.JPG" alt="" width="400" height="750" /><br>
+							<p><b>FlowChart Symbol</b></p>
+							<img src="images/flowchartsymbol.JPG" alt="" width="850" height="750" /><br>
+							<img src="images/flowchart2.JPG" alt="" width="500" height="500" /><br>
+							<h2><b>IPO or input process output</b></h2>
+							<p>Computer programs typically perform the following three-step process:</p>
+							<ul><p><li><b>Input</b> is received.</li><br>
+								<li>Some <b>process</b> is performed on the input.</li><br>
+								<li><b>Output</b>is produced.</li><br></p></ul>
+								<span class="image main"><img src="images/ipo.JPG" alt="" /></span>
+							<h2><b>variables</b></h2>
+							<p>Variable are: Storage location that have a name, Name-value pairs<br></p>
+
 
 						</div>
 					</div>
