--- a/L01.html
+++ b/L01.html
@@ -127,7 +127,7 @@
 							<img src="images/flowchart.JPG" alt="" width="400" height="750" /><br>
 							<p><b>FlowChart Symbol</b></p>
 							<img src="images/flowchartsymbol.JPG" alt="" width="850" height="750" /><br>
-							<img src="images/flowchart2.JPG" alt="" width="500" height="500" /><br>
+							<img src="images/flowchart2.JPG" alt="" width="700" height="500" /><br>
 							<h2><b>IPO or input process output</b></h2>
 							<p>Computer programs typically perform the following three-step process:</p>
 							<ul><p><li><b>Input</b> is received.</li><br>
@@ -136,7 +136,35 @@
 								<span class="image main"><img src="images/ipo.JPG" alt="" /></span>
 							<h2><b>variables</b></h2>
 							<p>Variable are: Storage location that have a name, Name-value pairs<br></p>
-
+							<span class="image main"><img src="images/variable.JPG" alt="" /></span>
+							<p><b>Valid Variable Names</b><br>1.Case sensitive.<br>2.Must start with a letter.<br>3.Underscores allowed in variable names.<br>4.Not allowed: + -</p>
+							<p><b>Reserved Words</b></p>
+							<span class="image main"><img src="images/reservedword.JPG" alt="" /></span>
+							<p>Reserved incorrect</p>
+							<span class="image main"><img src="images/reservedwordincorrect.JPG" alt="" /></span>
+							<p>Valid Variable Names</p>
+							<span class="image main"><img src="images/reservedwordcorrect.JPG" alt="" /></span>
+							<h2><b>data type</b></h2>
+							<p><b>Numeric Integer</b></p>
+							<p>Basic Data Types</p>
+							<ul><p><li>Numeric</li>
+								<ul><li>Integer</li>
+								<li>Floating point</li></ul>
+								<li>Boolean</li>
+								<li>String</li></p></ul>
+							<p>Composite Data Types (Later lessons)</p>
+							<ul><p><li>List</li>
+								<li>Tuple</li>
+								<li>Dictionary</li>
+								<li>Set</li></p></ul>
+							<h2><b>number</b></h2>
+							<p>Use numbers directly in your source code</p>
+							<img src="images/number.JPG" alt="" width="500" height="250" /><br>
+							<p>Incorrect to use Numbers</p>
+							<span class="image main"><img src="images/numberincorrect.JPG" alt="" /></span>
+							<p>Correct to use Numbers</p>
+							<span class="image main"><img src="images/numbercorrect.JPG" alt="" /></span>
+							<h2><b>boolean</b></h2>
 
 						</div>
 					</div>
