--- a/L01.html
+++ b/L01.html
@@ -165,6 +165,20 @@
 							<p>Correct to use Numbers</p>
 							<span class="image main"><img src="images/numbercorrect.JPG" alt="" /></span>
 							<h2><b>boolean</b></h2>
+							<p>A Boolean variable can reference one of two values: True or False. Boolean variables are commonly used as flags<br>, which indicate whether specific conditions exist.</p>
+							<p>Hungry = True <br> Sleepy = False <br></p>
+							<span class="image main"><img src="images/boolean.JPG" alt="" /></span>
+							<p><b>String</b></p>
+							<ul><p><li>Represent text</li>
+								<li>Surrounded by quotes</li></ul>
+							<p>*** Strings are start with ' or " and end with ' or "</p>
+							<span class="image main"><img src="images/str.JPG" alt="" /></span>
+							<h2><b>Python operators</b></h2>
+							<p><b>What are operators in python?</b></p>
+							<p>Operators are special symbols in Python that carry out arithmetic or logical computation. The value that the operator operates on is called the operand.</p>
+							<p><b>Expression Operator And Operand</b></p>
+							<span class="image main"><img src="images/operator.JPG" alt="" /></span>
+							
 
 						</div>
 					</div>
