--- a/L01.html
+++ b/L01.html
@@ -178,7 +178,25 @@
 							<p>Operators are special symbols in Python that carry out arithmetic or logical computation. The value that the operator operates on is called the operand.</p>
 							<p><b>Expression Operator And Operand</b></p>
 							<span class="image main"><img src="images/operator.JPG" alt="" /></span>
-							
+							<p><b>Arithmetic Operators</b></p>
+							<span class="image main"><img src="images/operator2.JPG" alt="" /></span>
+							<p>Example</p>
+							<span class="image main"><img src="images/operator3.JPG" alt="" /></span>
+							<p><b>Operator Precedence</b></p>
+							<span class="image main"><img src="images/operatorprecedence.JPG" alt="" /></span>
+							<span class="image main"><img src="images/operatorprecedence2.JPG" alt="" /></span>
+							<p><b>Comparison Operators</b></p>
+							<span class="image main"><img src="images/comparison.JPG" alt="" /></span>
+							<p>Example</p>
+							<span class="image main"><img src="images/comparison2.JPG" alt="" /></span>
+							<p><b>Logical Operators</b></p>
+							<span class="image main"><img src="images/logical.JPG" alt="" /></span>
+							<p>Example</p>
+							<span class="image main"><img src="images/logical2.JPG" alt="" /></span>
+
+
+
+
 
 						</div>
 					</div>
