--- a/L01.html
+++ b/L01.html
@@ -193,8 +193,25 @@
 							<span class="image main"><img src="images/logical.JPG" alt="" /></span>
 							<p>Example</p>
 							<span class="image main"><img src="images/logical2.JPG" alt="" /></span>
-
-
+							<p><b>Bitwise Operators</b></p>
+							<span class="image main"><img src="images/bitwise.JPG" alt="" /></span>
+							<p><b>Assignment Operators</b></p>
+							<span class="image main"><img src="images/assignment.JPG" alt="" /></span>
+							<p><b>Identity Operators</b></p>
+							<p>is and is not are the identity operators in Python. They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical.</p>
+							<span class="image main"><img src="images/identity.JPG" alt="" /></span>
+							<p>Example</p>		
+							<span class="image main"><img src="images/identity2.JPG" alt="" /></span>
+							<p><b>Membership operators</b></p>
+							<p>in and not are the membership operators in Python. They are used to test whether a value or variable is found in a sequence (string, list, tuple, set and dictionary).<br> In a dictionary we can only test for presence of key, not the value.</p>
+							<span class="image main"><img src="images/membership.JPG" alt="" /></span>
+							<p>Example</p>		
+							<span class="image main"><img src="images/membership2.JPG" alt="" /></span>
+							<h2><b>input</b></h2>
+							<p><b>Input()</b></p>
+							<p>input (): This function first takes the input from the user and converts it into a string. The type of the returned object always will be <type ‘str’>. It does not evaluate the expression it just returns the complete statement as String. For example, Python provides a built-in function called input which takes the input from the user. When the input function is called it stops the program and waits for the user’s input. When the user presses enter, the program resumes and returns what the user typed. </p>
+							<p><b>Expression Operator And Operand</b></p>
+							<span class="image main"><img src="images/operator.JPG" alt="" /></span>
 
 
 
