--- a/L01.html
+++ b/L01.html
@@ -210,8 +210,23 @@
 							<h2><b>input</b></h2>
 							<p><b>Input()</b></p>
 							<p>input (): This function first takes the input from the user and converts it into a string. The type of the returned object always will be <type ‘str’>. It does not evaluate the expression it just returns the complete statement as String. For example, Python provides a built-in function called input which takes the input from the user. When the input function is called it stops the program and waits for the user’s input. When the user presses enter, the program resumes and returns what the user typed. </p>
-							<p><b>Expression Operator And Operand</b></p>
-							<span class="image main"><img src="images/operator.JPG" alt="" /></span>
+							<p><b>variable = input(promt)</b></p>
+							<p><b>name input('What is your name? ')</b></p>
+							<span class="image main"><img src="images/input.JPG" alt="" /></span>
+							<p><b>Input Number</b></p>We will see how to take integer input in Python. As we know that Python’s built-in input() function always returns a str(string) class object. So for taking integer input we have to type cast those inputs into integers by using Python built-in int() function.
+							<p>Example</p>
+							<span class="image main"><img src="images/input2.JPG" alt="" /></span>
+							<p><b>Medhod</b><br>1. string_value = input('How many hours did you play games? '<br> hour = int(string_value)<br>2. hours = int(input("How many hours did you play games? '))</p>
+							<p>Example</p>
+							<span class="image main"><img src="images/input3.JPG" alt="" /></span>
+							<p><b>Read Multiple Values From Keyboard</b></p>
+							<p>Example</p>
+							<span class="image main"><img src="images/readmulti.JPG" alt="" /></span>
+							<h2><b>comments</b></h2>
+							<p>Comments in Python is the inclusion of short descriptions along with the code to increase its readability. A developer uses them to write his or her thought process while writing the code. It explains the basic logic behind why a particular line of code was written. They are just meant for the coders themselves or other developers to understand a piece of code, especially since the Python interpreter completely ignores comments in Python. You can see this in the following example. </p>
+							<p>*** Messages that use # in front will not be taken into account in the program. ***</p>
+							<p>Use # put in front <br> Example</p>
+							<span class="image main"><img src="images/comment.JPG" alt="" /></span>
 
 
 
