--- a/index.html
+++ b/index.html
@@ -183,6 +183,18 @@
 										</div>
 									</a>
 								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+									<a href="L09.html">
+										<h2>L09</h2>
+										<div class="content">
+											<p>What You Will Learn</p>
+											<p>PyGAME-ZERO</p>
+										</div>
+									</a>
+								</article>
 								
 							</section>
 						</div>
