--- a/L04.html
+++ b/L04.html
@@ -50,10 +50,10 @@
 						<li><a href="L06.html">L06</a></li>
 						<li><a href="L07.html">L07</a></li>
 						<li><a href="L08.html">L08</a></li>
+						<li><a href="L09.html">L09</a></li>
 
 					</ul>
 				</nav>
-
 
 				<!-- Main -->
 				<div id="main">
