--- a/L01.html
+++ b/L01.html
@@ -182,10 +182,10 @@
 							<p><b>Arithmetic Operators</b></p>
 							<span class="image main"><img src="images/operator2.JPG" alt="" /></span>
 							<p>Example</p>
-							<span class="image main"><img src="images/operator3.JPG" alt="" /></span>
+							<img src="images/operator3.JPG" alt="" width="800" height="800" />
 							<p><b>Operator Precedence</b></p>
-							<span class="image main"><img src="images/operatorprecedence.JPG" alt="" /></span>
-							<span class="image main"><img src="images/operatorprecedence2.JPG" alt="" /></span>
+							<img src="images/operatorprecedence.JPG" alt="" width="900" height="700"/>
+							<img src="images/operatorprecedence2.JPG" alt=""width="600" height="700" />
 							<p><b>Comparison Operators</b></p>
 							<span class="image main"><img src="images/comparison.JPG" alt="" /></span>
 							<p>Example</p>
