--- a/L02.html
+++ b/L02.html
@@ -58,18 +58,25 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Computer and Programming</h1>
-						<span class="image main"><img src="images/L01computer.png" alt="" /></span>
-						<h2>What Is Computer?</h2>
-						<p>A computer is an electronic machine that processes information—in other words, an information processor: it takes in raw information (or data) at one end, stores it until it's ready to work on it, chews and crunches it for a bit, then spits out the results at the other end. All these processes have a name. Taking in information is called input, storing information is better known as memory (or storage), chewing information is also known as processing, and spitting out results is called output.</p>
-						<h2>How Does a Computer Work?</h2>
-						<p>A computer processes the input to produce the desired output, but how does a machine outperform the human brain?
-							Conventional computers don't try to mimic the human brain. Instead, they run commands sequentially, with data constantly moving from input and memory to the device's processor. Neuromorphic computers, on the other hand, process data at the same time, making them faster, energy-efficient, and closer to the structure of the human brain.</p>
-							<p>Overall, a computer works in four steps:</p>
-							<ul><p><li><b>Input:</b> Input is the data before processing. It comes from the mouse, keyboard, microphone, and other external sensors.</li> <br>
-								<li><b>Storage:</b> The storage is how the computer retains input data. The hard drive is used for long-term and mass data storage while the data set for immediate processing is stored temporarily in the Random Access Memory (RAM).</li><br>
-								<li><b>Processing:</b> Processing is where input gets transformed into output. The computer's Central Processing Unit (CPU) is its brain. It's responsible for executing instructions and performing mathematical operations on the input data.</li><br>
-								<li><b>Output:</b> Output is the final result of data processing. It can be anything from images, video, or audio content, even the words you type using a keyboard. You can also receive the output through a printer or a projector instead of directly through your device.</li><br></p></ul>
+						<h1>if-elif-else draw.io</h1>
+						<h2><b>decision structure</b><br>if - elif - else</h2>
+						<span class="image main"><img src="images/decision.jpg" alt="" /></span>
+						<h2><b>draw.io</b></h2>
+						<center><img src="images/drawiologo.png"width = "500" height="500" alt=""  /></center>
+						<p>diagrams.net (previously draw.io) is a free and open source cross-platform graph drawing software developed in HTML5 and JavaScript. Its interface can be used to create diagrams such as flowcharts, wireframes, UML diagrams, organizational charts, and network diagrams.</p>
+							<p><b>How to use drawio :</b></p>
+							<ul><p><li><b>1.</b> Selec Extensions</li> <br>
+								<span class="image main"><img src="images/drawio.png" alt="" /></span>
+								<li><b>2.</b> Search and Install Draw.io</li><br>
+								<span class="image main"><img src="images/drawio2.png" alt="" /></span>
+								<li><b>3.</b> Select creat file and creat file .drawio file extension</li><br>
+								<img src="images/drawio3.png" alt="" height="500" width="500" />
+								<li><b>4.</b> How to use the FlowChart , Select + More Shapes</li><br>
+								<span class="image main"><img src="images/drawio4.png" alt="" /></span>
+								<li><b>5.</b> Select Flowchart and Apply</li><br>
+								<img src="images/drawio5.png" alt="" height="500" width="650" />
+								<li><b>6.</b>You can use Flowchart </li><br></p></ul>
+								<span class="image main"><img src="images/drawio6.png" alt="" /></span>
 							<span class="image main"><img src="images/inputprocessoutput.png" alt="" /></span>
 						<h2>Software?</h2>
 						<p>Software is a set of computer programs and associated documentation and data. This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
