--- a/L02.html
+++ b/L02.html
@@ -77,11 +77,16 @@
 								<img src="images/drawio5.png" alt="" height="500" width="650" />
 								<li><b>6.</b>You can use Flowchart </li><br></p></ul>
 								<span class="image main"><img src="images/drawio6.png" alt="" /></span>
-							<span class="image main"><img src="images/inputprocessoutput.png" alt="" /></span>
-						<h2>Software?</h2>
-						<p>Software is a set of computer programs and associated documentation and data. This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
-						<span class="image main"><img src="images/software.png" alt="" /></span>
-						<h3>System Software</h3>
+								<p>Flowchart Symbol</p>
+							<span class="image main"><img src="images/flowchartsymbol.JPG" alt="" /></span>
+							<span class="image main"><img src="images/flowchartexample.png" alt="" /></span>
+						<h2><b>decision structure<br>IF</b></h2>
+						<p>Python if statement is one of the most commonly used conditional statements in programming languages. It decides whether certain statements need to be executed or not. It checks for a given condition, if the condition is true, then the set of code present inside the ” if ” block will be executed otherwise not.</p>
+						<span class="image main"><img src="images/if.png" alt="" /></span>
+						<span class="image main"><img src="images/if2.png" alt="" /></span>
+						<h3>Boolean : relational operators</h3>
+						<span class="image main"><img src="images/if3.png" alt="" /></span>
+						<span class="image main"><img src="images/if4.png" alt="" /></span>
 						<ul><p><li><b>Operating Systems:</b> Windows, Mac Os, Linux</li><br>
 							<li><b>Utility Programs:</b> Compression, Virus scanners, Back up</li><br>
 							<li><b>Software Development:</b>Assemblers, Compilers, Interpreter</li><br></ul>
