--- a/L02.html
+++ b/L02.html
@@ -80,16 +80,31 @@
 								<p>Flowchart Symbol</p>
 							<span class="image main"><img src="images/flowchartsymbol.JPG" alt="" /></span>
 							<span class="image main"><img src="images/flowchartexample.png" alt="" /></span>
-						<h2><b>decision structure<br>IF</b></h2>
+						<h2><b>decision structure<br> IF</b></h2>
 						<p>Python if statement is one of the most commonly used conditional statements in programming languages. It decides whether certain statements need to be executed or not. It checks for a given condition, if the condition is true, then the set of code present inside the ” if ” block will be executed otherwise not.</p>
 						<span class="image main"><img src="images/if.png" alt="" /></span>
 						<span class="image main"><img src="images/if2.png" alt="" /></span>
 						<h3>Boolean : relational operators</h3>
 						<span class="image main"><img src="images/if3.png" alt="" /></span>
 						<span class="image main"><img src="images/if4.png" alt="" /></span>
-						<ul><p><li><b>Operating Systems:</b> Windows, Mac Os, Linux</li><br>
-							<li><b>Utility Programs:</b> Compression, Virus scanners, Back up</li><br>
-							<li><b>Software Development:</b>Assemblers, Compilers, Interpreter</li><br></ul>
+						<p><b>Example Decision Structure</b></p>
+						<span class="image main"><img src="images/if5.png" alt="" /></span>
+						<h2><b>decision structure<br> IF-else</b></h2>
+						<p>The if-else statement is used to execute both the true part and the false part of a given condition. If the condition is true, the if block code is executed and if the condition is false, the else block code is executed.</p>
+						<span class="image main"><img src="images/ifelse.png" alt="" /></span>
+						<span class="image main"><img src="images/ifelse2.png" alt="" /></span>
+						<p><b>IF-ELSE INDENTATION</b></p>
+						<span class="image main"><img src="images/ifelse3.png" alt="" /></span>
+						<p><b>Example IF-ELSE</b></p>
+						<span class="image main"><img src="images/ifelse4.png" alt="" /></span>
+						<span class="image main"><img src="images/ifelse5.png" alt="" /></span>
+						<span class="image main"><img src="images/ifelse6.png" alt="" /></span>
+						<span class="image main"><img src="images/ifelse7.png" alt="" /></span>
+						<h2><b>string comparison</b></h2>
+						<ul><p><li>The uppercase characters A through Z are represented by the numbers 65 through 90.</li><br>
+							<li>The lowercase characters a through z are represented by the numbers 97 through 122.</li><br>
+							<li>When the digits 0 through 9 are stored in memory as characters, they are represented by the numbers 48 through 57. (For example, the string 'abc123' would be stored in memory as the codes 97, 98, 99, 49, 50, and 51.)</li><br>
+							<li>A blank space is represented by the number 32.</li><br></ul>
 						<h3>Application Software</h3>
 						<ul><p><li><b>Example Application:</b> Microsoft word, PowerPoint, Excel, Photoshop</li><br></ul>
 						<h2>How Computer store data?</h2>
