--- a/L02.html
+++ b/L02.html
@@ -118,8 +118,8 @@
 						<right><img src="images/ifelifelse2.png"width = "450" height="450" alt=""  /></right>	
 						<p><b>Example IF-ELIF-ELSE</b></p>
 						<p>A nested decision structure</p>
-						<right><img src="images/ifelifelse3.png"width = "500" height="450" alt=""  /></right>	
-						<right><img src="images/ifelifelse4.png"width = "550" height="450" alt=""  /></right>
+						<right><img src="images/ifelifelse3.png"width = "500" height="450" alt=""  /></right><br>	
+						<right><img src="images/ifelifelse4.png"width = "550" height="450" alt=""  /></right><br>
 						<right><img src="images/ifelifelse5.png"width = "500" height="500" alt=""  /></right>
 					</div>
 				</div>
