--- a/L00.html
+++ b/L00.html
@@ -88,7 +88,7 @@
                             <h2><p>INSTALL PYTHON</p></h2>
                             <h2><p>1.</p></h2>
                             <span class="image main"><img src="images/L00installpython.png" alt="" /></span>
-                            <a href="http://www.python.org">Python Install</a>
+                            <a href="http://www.python.org" target="_blank">Python Install</a>
 							<h2><p>2.</p></h2>
                             <span class="image main"><img src="images/L00installpython2.png" alt="" /></span>
 
@@ -103,7 +103,7 @@
 							<p>Visual Studio Code was first announced on April 29, 2015, by Microsoft at the 2015 Build conference. A preview build was released shortly thereafter.
 								On November 18, 2015, the source of Visual Studio Code was released under the MIT License, and made available on GitHub. Extension support was also announced. On April 14, 2016, Visual Studio Code graduated from the public preview stage and was released to the Web. Microsoft has released most of Visual Studio Code's source code on GitHub under the permissive MIT License, while the releases by Microsoft are proprietary freeware.</p>
 							<h2><p>INSTALl VISUAL STUDIO CODE</p></h2>
-							<a href="https://code.visualstudio.com/">Visual Studio Code Install</a>
+							<a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code Install</a>
 							<h2><p>1. Select Operating System</p></h2>
 							<span class="image main"><img src="images/L00vscode2n.png" alt="" /></span>
 						</div>
@@ -123,7 +123,7 @@
 								<li>Make changes to a file and push them to GitHub as commits</li><br>
 								<li>Open and merge a pull request</li><br></p></ul>
 							<h2><p>GITHUB</p></h2>
-							<a href="https://github.com/">Sign in & Sign up GitHub</a>
+							<a href="https://github.com/" target="_blank">Sign in & Sign up GitHub</a>
 							<h2><p>1. Select Sign in & Sign up</p></h2>
 							<span class="image main"><img src="images/githubsign.png" alt="" /></span>
 							<p>If you don't have an account, select Sign up. Then complete the information.</p>
