--- a/L03.html
+++ b/L03.html
@@ -58,14 +58,39 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Computer and Programming</h1>
-						<span class="image main"><img src="images/L01computer.png" alt="" /></span>
-						<h2>What Is Computer?</h2>
-						<p>A computer is an electronic machine that processes information—in other words, an information processor: it takes in raw information (or data) at one end, stores it until it's ready to work on it, chews and crunches it for a bit, then spits out the results at the other end. All these processes have a name. Taking in information is called input, storing information is better known as memory (or storage), chewing information is also known as processing, and spitting out results is called output.</p>
-						<h2>How Does a Computer Work?</h2>
-						<p>A computer processes the input to produce the desired output, but how does a machine outperform the human brain?
-							Conventional computers don't try to mimic the human brain. Instead, they run commands sequentially, with data constantly moving from input and memory to the device's processor. Neuromorphic computers, on the other hand, process data at the same time, making them faster, energy-efficient, and closer to the structure of the human brain.</p>
-							<p>Overall, a computer works in four steps:</p>
+						<h1>REPETITION WHILE FOR</h1>
+						<span class="image main"><img src="images/loop.png" alt="" /></span>
+						<h2>repetiton structures</h2>
+						<span class="image main"><img src="images/repetiton.png" alt="" /></span>
+						<span class="image main"><img src="images/repetition2.png" alt="" /></span>
+						<p>This code is one long sequence structure containing a lot of duplicated code.
+						There are several disadvantages to this approach, including the following:</p>
+						<ul><p><li>The duplicated code makes the program large.</li><br>
+							<li>Writing a long sequence of statements can be time consuming.</li><br>
+							<li>If part of the duplicated code has to be corrected or changed then the
+								correction or change has to be done many times.</li><br></ul>		
+						<p>A repetition structure causes a statement or set of
+							statements to execute repeatedly.In this course, we will look
+							at two broad categories of loops: condition-controlled and
+							count-controlled.</p>
+						<h2>condidtion-controlled loop</h2>
+						<p>A re A condition-controlled loop uses a true/false condition
+							to control the number of times that it repeats. In Python you
+							use the while statement to write a condition-controlled loop</p>
+
+						<center><img src="images/condition.png"width = "550" height="350" alt=""  /></center>
+						<center><img src="images/while.png"width = "500" height="380" alt=""  /></center>
+						<p>Example while loop</p>
+						<center><img src="images/while2.png"width = "500" height="450" alt=""  /></center>
+						<p><b>How Different Between Repetition Structure and While</b></p>
+						<center><img src="images/repetition2.png"width = "600" height="550" alt=""  /></center>
+						<center><img src="images/while3.png"width = "700" height="650" alt=""  /></center>
+
+
+
+
+
+
 							<ul><p><li><b>Input:</b> Input is the data before processing. It comes from the mouse, keyboard, microphone, and other external sensors.</li> <br>
 								<li><b>Storage:</b> The storage is how the computer retains input data. The hard drive is used for long-term and mass data storage while the data set for immediate processing is stored temporarily in the Random Access Memory (RAM).</li><br>
 								<li><b>Processing:</b> Processing is where input gets transformed into output. The computer's Central Processing Unit (CPU) is its brain. It's responsible for executing instructions and performing mathematical operations on the input data.</li><br>
