--- a/L03.html
+++ b/L03.html
@@ -74,6 +74,7 @@
 							at two broad categories of loops: condition-controlled and
 							count-controlled.</p>
 						<h2>condidtion-controlled loop</h2>
+						<h2>While</h2>
 						<p>A re A condition-controlled loop uses a true/false condition
 							to control the number of times that it repeats. In Python you
 							use the while statement to write a condition-controlled loop</p>
@@ -85,6 +86,30 @@
 						<p><b>How Different Between Repetition Structure and While</b></p>
 						<center><img src="images/repetition2.png"width = "600" height="550" alt=""  /></center>
 						<center><img src="images/while3.png"width = "700" height="650" alt=""  /></center>
+						<center><img src="images/while4.png"width = "850" height="650" alt=""  /></center>
+						<p><b>Example while loop</b></p>
+						<right><img src="images/while5.png"width = "600" height="620" alt=""  /></right><br>
+						<h2>for</h2>
+						<p>A count-controlled loop repeats a specific number of times.
+							In Python you use the for statement to write a count-
+							controlled loop.</p>
+							<center><img src="images/for.png"width = "500" height="290" alt=""  /></center>
+						<p>Example for loop</p>
+						<right><img src="images/for2.png"width = "680" height="600" alt=""  /></right><br>
+						<right><img src="images/for3.png"width = "500" height="700" alt=""  /></right>
+	
+						<p><b>Example for loop range</b></p>
+						<center><img src="images/for4.png"width = "700" height="580" alt=""  /></center>
+						<center><img src="images/for5.png"width = "600" height="700" alt=""  /></center>
+						
+
+
+
+
+
+
+
+
 
 
 
@@ -217,42 +242,6 @@
 						<span class="image main"><img src="images/comparison2.JPG" alt="" /></span>
 						<p><b>Logical Operators</b></p>
 						<span class="image main"><img src="images/logical.JPG" alt="" /></span>
-						<p>Example</p>
-						<span class="image main"><img src="images/logical2.JPG" alt="" /></span>
-						<p><b>Bitwise Operators</b></p>
-						<span class="image main"><img src="images/bitwise.JPG" alt="" /></span>
-						<p><b>Assignment Operators</b></p>
-						<span class="image main"><img src="images/assignment.JPG" alt="" /></span>
-						<p><b>Identity Operators</b></p>
-						<p>is and is not are the identity operators in Python. They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical.</p>
-						<span class="image main"><img src="images/identity.JPG" alt="" /></span>
-						<p>Example</p>		
-						<span class="image main"><img src="images/identity2.JPG" alt="" /></span>
-						<p><b>Membership operators</b></p>
-						<p>in and not are the membership operators in Python. They are used to test whether a value or variable is found in a sequence (string, list, tuple, set and dictionary).<br> In a dictionary we can only test for presence of key, not the value.</p>
-						<span class="image main"><img src="images/membership.JPG" alt="" /></span>
-						<p>Example</p>		
-						<span class="image main"><img src="images/membership2.JPG" alt="" /></span>
-						<h2><b>input</b></h2>
-						<p><b>Input()</b></p>
-						<p>input (): This function first takes the input from the user and converts it into a string. The type of the returned object always will be <type ‘str’>. It does not evaluate the expression it just returns the complete statement as String. For example, Python provides a built-in function called input which takes the input from the user. When the input function is called it stops the program and waits for the user’s input. When the user presses enter, the program resumes and returns what the user typed. </p>
-						<p><b>variable = input(promt)</b></p>
-						<p><b>name input('What is your name? ')</b></p>
-						<span class="image main"><img src="images/input.JPG" alt="" /></span>
-						<p><b>Input Number</b></p>We will see how to take integer input in Python. As we know that Python’s built-in input() function always returns a str(string) class object. So for taking integer input we have to type cast those inputs into integers by using Python built-in int() function.
-						<p>Example</p>
-						<span class="image main"><img src="images/input2.JPG" alt="" /></span>
-						<p><b>Medhod</b><br>1. string_value = input('How many hours did you play games? '<br> hour = int(string_value)<br>2. hours = int(input("How many hours did you play games? '))</p>
-						<p>Example</p>
-						<span class="image main"><img src="images/input3.JPG" alt="" /></span>
-						<p><b>Read Multiple Values From Keyboard</b></p>
-						<p>Example</p>
-						<span class="image main"><img src="images/readmulti.JPG" alt="" /></span>
-						<h2><b>comments</b></h2>
-						<p>Comments in Python is the inclusion of short descriptions along with the code to increase its readability. A developer uses them to write his or her thought process while writing the code. It explains the basic logic behind why a particular line of code was written. They are just meant for the coders themselves or other developers to understand a piece of code, especially since the Python interpreter completely ignores comments in Python. You can see this in the following example. </p>
-						<p>*** Messages that use # in front will not be taken into account in the program. ***</p>
-						<p>Use # put in front <br> Example</p>
-						<span class="image main"><img src="images/comment.JPG" alt="" /></span>
 
 
 
